correct float menu order, adding float right to menu and text-align: center and float: left to menu li

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,22 @@ h2 {
 #logo {
     float: left;
     font-size: 280%;
-    
-
 }
+
+/* navigation links */
+
+#menu {
+    font-size: 110%;
+    letter-spacing: 3px;
+    float:right;
+}
+
+#menu li {
+    list-style-type: none;
+    margin-right: 40px;
+    text-align: center;
+    float:left;
+}
+
+
+
